--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 </head>
 <body>
-  <h1>Search U.S National PArks!</h1>
+  <h1>Search U.S National Parks!</h1>
   <form id="js-form">
     <label for="search-state">Search State</label>
-    <input type="text" name="search-state" id="js-search-state" required>
+    <input type="text" name="search-state" id="js-search-state" required><br>
 
-    <label for="max-results">Maximum results to return</label>
+    <label for="max-results">Maximum number of results</label>
     <input type="number" name="max-results" id="js-max-results" value="10">
 
     <input type="submit" value="Search!">
@@ -23,10 +23,10 @@
 
 
 
-  <script src="index.js"></script>
   <script
-  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
 </html>
